--- a/index.html
+++ b/index.html
@@ -6,12 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Christopher's Portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+<header class="header">
 
+    <a href="#home" class="logo">Christopher <span>Makeketa</span></a>
+
+    <i class="bx bx-menu" id="menu-icon"></i>
+
+    <nav class="navbar">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#services">Services</a>
+        <a href="#projects">Projects</a>
+        <a href="contact">Contact</a>
+    </nav>
+</header>
                 <h1>Christopher Makeketa</h1>
                 <h2>Full-Stack Web Developer</h2>
                 <p>I am a Full-Stack Software Engineering & Web development student based<br>in Johannesburg, South Africa.<br>
